feat: Enhance LLM integration and repository overview generation in Context Keeper

--- a/docker/docker-compose-simple.yml
+++ b/docker/docker-compose-simple.yml
@@ -21,12 +21,15 @@ services:
     # No volumes
 
   ollama:
-    image: ollama/ollama:latest
-    container_name: context-keeper-ollama
-    ports:
-      - "11434:11434"
-    restart: unless-stopped
-    # No volumes
+  image: ollama/ollama:latest
+  container_name: context-keeper-ollama
+  ports:
+    - "11434:11434"
+  volumes:
+    - D:/ollama_models:/root/.ollama  # Changed to D drive
+  environment:
+    - OLLAMA_KEEP_ALIVE=24h
+  restart: unless-stopped
 
 networks:
   default:
