feat: initialize frontend project with Next.js, Tailwind CSS, and TypeScript
- Added package.json with dependencies and scripts for development, build, and linting.
- Created postcss.config.js and postcss.config.mjs for PostCSS configuration.
- Added Tailwind CSS configuration in tailwind.config.js.
- Set up TypeScript configuration in tsconfig.json.
- Included SVG assets in the public directory for use in the application.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -47,6 +47,33 @@ services:
       - NEO4J_AUTH=neo4j/contextkeeper2024
     restart: unless-stopped
 
+  frontend:
+    build: ./frontend
+    container_name: context-keeper-frontend
+    ports:
+      - "3000:3000"
+    environment:
+      - NEXT_PUBLIC_API_URL=http://backend:8000
+    depends_on:
+      - backend
+    
+  backend:
+    build: ./backend
+    container_name: context-keeper-backend
+    ports:
+      - "8000:8000"
+    # ... rest of backend config
+
+  nginx:
+    image: nginx:alpine
+    container_name: context-keeper-nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - frontend
+      - backend
 networks:
   default:
     name: context-keeper-network
